---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @func(ptr %0, ptr %1) {
entry:
  %func = alloca i32, align [filtered]
  %d_and_t = alloca ptr, align [filtered]
  store ptr %0, ptr %d_and_t, align [filtered]
  %time_var = alloca ptr, align [filtered]
  store ptr %1, ptr %time_var, align [filtered]
  store i32 0, ptr %func, align [filtered]
  %2 = load ptr, ptr %d_and_t, align [filtered]
  store i64 0, ptr %2, align [filtered]
  %3 = load ptr, ptr %time_var, align [filtered]
  store i64 0, ptr %3, align [filtered]
  %deref = load ptr, ptr %d_and_t, align [filtered]
  %deref1 = load ptr, ptr %d_and_t, align [filtered]
  %load_d_and_t = load i64, ptr %deref1, align [filtered]
  %deref2 = load ptr, ptr %time_var, align [filtered]
  %load_time_var = load i64, ptr %deref2, align [filtered]
  %tmpVar = add i64 %load_d_and_t, %load_time_var
  store i64 %tmpVar, ptr %deref, align [filtered]
  %func_ret = load i32, ptr %func, align [filtered]
  ret i32 %func_ret
}
